fix input on ios

--- a/app/styles/helpers/_global.scss
+++ b/app/styles/helpers/_global.scss
@@ -12,6 +12,7 @@ img {
   width: 100%;
 }
 input {
+  -webkit-appearance: none;
   border: 1px #ccc solid;
   height: 100%;
   width: 100%;
